# AI-VOICE

./: .gitattributes  .gitignore  LCNN_UPLOAD_REPORT.md  README.md  UPLOAD_REPORT.md
AASIST/: EVAL_2021_README.md  evaluate_2021.py  match_and_evaluate_2021_matched_scores.txt  test_audio_loading.py
AASIST_ND/: match_and_evaluate.py  match_and_evaluate_2021.txt  scores_2021_metrics.txt
CQCC-GMM/: .gitignore  CQCC_GMM_EXPERIMENT_DETAILS.md  README.md  TRAINING_COMMANDS.md  environment.yml  evaluation_metrics.csv  lcnn_vs_cqcc_gmm_comparison.csv
CQCC-GMM/models/: cqcc_gmm_2019la_ljspeech_retrain_300k.joblib
CQCC-GMM/scripts/: build_eval_subset_from_ids.py  build_manifests.py  evaluate_incremental.py  make_smoke_data.py  run_retrain_2019la_ljspeech_2021whisper.cmd
LCNN/: README.md  environment.yml  infer.py
LCNN/scripts/: run_lcnn_subset_eval_after_training.ps1  test_lcnn_2021_subset_from_csv.py  train_lcnn_asvspoof2019_ljspeech.py  verify_cuda.py
LCNN/src/: audio_io.py  infer_lcnn.py
Rawnet2/: .gitignore  data_utils.py  environment.yml  main.py  metrics_utils.py  requirements.txt
Rawnet2/outputs/: rawnet2_ljspeech_aug_whisper_comparison.csv  rawnet2_ljspeech_aug_whisper_metrics.json  rawnet2_ljspeech_aug_whisper_progress.csv  rawnet2_ljspeech_aug_whisper_report.json  (+1 more)
docs/: upload_checklist.md
lcnn/: LCNN_EXPERIMENT_DETAILS.md  environment_gpu.yml  test_asvspoof2021_la_eval.py  train.py
lcnn/src/: __init__.py  (+3 more)
methods/cqcc_gmm/: pyproject.toml
methods/cqcc_gmm/scripts/: run_eval_whisper_subset.cmd
methods/cqcc_gmm/src/cqcc_gmm/: data.py  model.py
(+67 files in other folders)
