[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cqcc-gmm-ai-audio"
version = "0.1.0"
description = "Local CQCC-GMM baseline for AI audio spoof detection."
requires-python = ">=3.10"
dependencies = [
  "joblib",
  "imageio-ffmpeg",
  "librosa",
  "matplotlib",
  "numpy",
  "scikit-learn",
  "scipy",
  "soundfile",
  "tqdm",
]

[project.scripts]
cqcc-gmm = "cqcc_gmm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
